# xss-sentinel

./: .gitignore  CONTRIBUTING.md  CREATE_COMPLETE_PACKAGE.py  FIXES_SUMMARY.md  FUTURE_ENHANCEMENTS.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_STATUS.md  INSTALL_WINDOWS.bat  LICENSE  PROGRESS_REPORT.md  README.md  README_NEURAL_ENGINE.md  RELEASE_v2.0.0.md  SECURITY.md  fix_xss_sentinel.py  install.py  pyproject.toml  requirements.txt  setup.py  test_fixes.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  neural_engine_enhancement.md
.github/workflows/: ci.yml
ai/: context_analyzer.py  payload_generator.py
core/: crawler.py  reporter.py  scanner.py
docker/: Dockerfile  Dockerfile.dashboard  docker-compose.yml
docs/: TROUBLESHOOTING.md  USAGE.md
examples/: complete_demo.py  quick_test.py  simple_demo.py  test_real_site.py  test_real_site_enhanced.py
ml/: model.py
reports/: xss_scan_1752817750.json  xss_scan_1752818466.json
tests/: __init__.py  test_basic.py  test_neural_engine.py
utils/: http_utils.py
xss_sentinel/: __init__.py  cli.py
xss_sentinel.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
xss_sentinel/ai/: adaptive_learning.py  adversarial_fuzzer.py  core_ai.py  transformer_generator.py
xss_sentinel/core/: crawler.py  html_reporter.py  parallel_scanner.py  payload_manager.py  red_team.py  reporter.py  scanner.py
xss_sentinel/crawlers/: __init__.py  advanced_crawler.py  js_crawler.py  wayback_crawler.py
xss_sentinel/ml/: context_analyzer.py  model.py  payload_generator.py
xss_sentinel/neural_engine/: __init__.py  blind_xss_monitor.py  context_predictor.py  distributed_swarm.py  gan_payload_generator.py  genetic_mutator.py  integration.py  reinforcement_learner.py  visual_xss_detector.py  waf_fingerprinter.py
xss_sentinel/utils/: browser_verifier.py  deep_context.py  dom_utils.py  http_utils.py
