[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "xss-sentinel"
version = "1.0.0"
description = "Advanced AI-Powered XSS Testing Platform"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "NOTTIBOY137", email = ""}
]
maintainers = [
    {name = "NOTTIBOY137", email = ""}
]
keywords = ["security", "xss", "vulnerability", "scanner", "ai", "machine-learning"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Testing",
    "Topic :: System :: Networking :: Monitoring",
]
requires-python = ">=3.8"
dependencies = [
    "requests>=2.28.1",
    "beautifulsoup4>=4.11.1",
    "scikit-learn>=1.1.2",
    "numpy>=1.23.2",
    "tqdm>=4.64.0",
    "colorama>=0.4.5",
    "joblib>=1.1.0",
    "lxml>=4.9.0",
    "selenium>=4.0.0",
    "fake-useragent>=1.1.0",
    "cloudscraper>=1.2.0",
    "undetected-chromedriver>=3.5.0",
    "requests-html>=0.10.0",
    "aiohttp>=3.8.0",
    "asyncio-throttle>=1.0.0",
    "python-whois>=0.8.0",
    "dnspython>=2.3.0",
    "cryptography>=3.4.0",
    "pycryptodome>=3.15.0",
    "urllib3>=1.26.0",
    "playwright>=1.40.0",
]

[project.optional-dependencies]
ai = [
    "sentence-transformers>=2.2.0",
    "transformers>=4.20.0",
    "torch>=1.12.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "flake8>=5.0.0",
    "black>=22.0.0",
    "bandit>=1.7.0",
    "safety>=2.0.0",
    "mypy>=1.0.0",
]
docs = [
    "sphinx>=5.0.0",
    "sphinx-rtd-theme>=1.0.0",
    "myst-parser>=0.18.0",
]

[project.urls]
Homepage = "https://github.com/NOTTIBOY137/xss-sentinel"
Documentation = "https://github.com/NOTTIBOY137/xss-sentinel#readme"
Repository = "https://github.com/NOTTIBOY137/xss-sentinel.git"
"Bug Tracker" = "https://github.com/NOTTIBOY137/xss-sentinel/issues"
"Discussions" = "https://github.com/NOTTIBOY137/xss-sentinel/discussions"

[project.scripts]
xss-sentinel = "xss_sentinel.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["xss_sentinel*"]

[tool.setuptools.package-data]
"xss_sentinel" = ["data/**/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=xss_sentinel",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[tool.coverage.run]
source = ["xss_sentinel"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
    "*/venv/*",
    "*/env/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    ".venv",
    "venv",
    ".eggs",
    "*.egg",
]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "requests.*",
    "bs4.*",
    "selenium.*",
    "playwright.*",
    "sklearn.*",
    "numpy.*",
    "tqdm.*",
    "colorama.*",
    "joblib.*",
    "lxml.*",
    "fake_useragent.*",
    "cloudscraper.*",
    "undetected_chromedriver.*",
    "requests_html.*",
    "aiohttp.*",
    "asyncio_throttle.*",
    "python_whois.*",
    "dns.*",
    "cryptography.*",
    "Crypto.*",
    "urllib3.*",
]
ignore_missing_imports = true 